# rsof-slack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.turbo/cache/: 21f45720764a05ed-manifest.json  21f45720764a05ed-meta.json  21f45720764a05ed.tar.zst  bc8a70c16f93c0f9-manifest.json  bc8a70c16f93c0f9-meta.json  bc8a70c16f93c0f9.tar.zst
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: auth.py  config.py  database.py  main.py
app/models/: schemas.py  slack_user.py
app/routers/: admin.py  health.py  me.py
app/services/: slack_monitor.py  slack_sync.py  user_mapping_sync.py
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/api/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
apps/api/src/auth/: api-key-or-jwt-admin.guard.ts  api-key.guard.ts  jwt.guard.ts
apps/api/src/events/: events.service.ts
apps/api/src/health/: health.controller.ts  health.module.ts
apps/api/src/me/: me.controller.ts  me.module.ts  me.service.ts
apps/web/: .env.example  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/: pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/lib/: api.ts  auth.tsx
frontend/src/routes/: __root.tsx  activity.tsx  docs.tsx  index.tsx  users.$slackId.tsx
patches/: @slack__rtm-api@5.0.5.patch
(+27 files in other folders)
