[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsof-slack"
version = "0.1.0"
description = "Slack presence and status monitoring service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "slack-sdk>=3.33.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.13.5",
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
dev = "app.main:start_dev"
prod = "app.main:start_prod"

[tool.hatch.build.targets.wheel]
packages = ["app"]
